language/move-lang/tests/move_check/typing/type_variable_join_threaded_pack_invalid.exp
error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_pack_invalid.move:42:9 ───
    │
 42 │         b
    │         ^ Invalid return expression
    ·
 38 │         let b = Box { f1: x, f2: x };
    │                 -------------------- The type: ''''''integer''''''
    ·
 35 │     fun t0(): Box<bool> {
    │                   ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_pack_invalid.move:47:17 ───
    │
 47 │         let x = Container::get(&v);
    │                 ^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
    ·
 49 │         Container::put(&mut v, Box {f1: R{}, f2: R{}});
    │                                ---------------------- The resource type '0x1::M::Box<0x1::M::R>' does not satisfy the constraint 'copyable'
    ·
 28 │     resource struct R{}
    │     -------- The type's constraint information was declared here
    ·
 10 │     public fun get<V: copyable>(self: &T<V>): V {
    │                       -------- 'copyable' constraint declared here
    │

